# ray-tracer

./: .gitignore  README.md  config.cabal  main.hs
src/: AABB.hs  BVH.hs  Camera.hs  Color.hs  Hittable.hs  Interval.hs  Material.hs  ONB.hs  PDF.hs  Perlin.hs  Quad.hs  Random.hs  Ray.hs  Sphere.hs  Texture.hs  Vec3.hs
